# mage

./: .gitignore  README.md  changelogs.txt  license.txt
3rd_party_licenses/: liblzma.txt  lucide.txt  nacl.txt  openssl.txt  qt.txt  zstd.txt
src/: CMakeLists.txt  deploy_deps.sh  installer.iss
src/.cpp/: __cipher.cpp  aes256gcm.cpp  aes_ni.cpp  argon2id_hashing.cpp  cm.cpp  compression.cpp  error_msg.cpp  fileformat.cpp  gui.cpp  gui_worker.cpp  keyfile.cpp  mage_ipc.cpp  main.cpp  outs.cpp  path_handler.cpp  secure_memory.cpp  settings.cpp  sfx.cpp  shortcuts.cpp  stylesheet.cpp  xchacha20poly1305.cpp
src/.hpp/: __cipher.hpp  aes256gcm.hpp  aes_ni.hpp  argon2id_hashing.hpp  cm.hpp  compression.hpp  error_msg.hpp  fileformat.hpp  gui.hpp  gui_worker.hpp  keyfile.hpp  mage_ipc.hpp  outs.hpp  path_handler.hpp  secure_memory.hpp  settings.hpp  sfx.hpp  shortcuts.hpp  stylesheet.hpp  xchacha20poly1305.hpp
src/assets/__cache/no/: app_icon.rc  check_qt_multimedia.cmake
src/assets/imgs/s_icons/: cmd
src/assets/txt_data/: tooltips
